# focused-writer

./: package-lock.json  package.json
.github/workflows/: release.yml
landing/: index.html  package-lock.json  package.json
landing/api/: checkout.ts  download.ts  verify.ts
landing/src/: App.tsx  index.css
src/: App.css  App.tsx  license.ts  session.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  focus_lock.rs  main.rs  session.rs
