[package]
name = "block-writer"
version = "1.9.1"
description = "A distraction-free text editor"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"
